FEAT: add recommender service + circuit breaker
