# BookService/src/routes/bookRouter.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express'
 import {
   getBookByISBN,
+  getBookByISBNRelatedBooks,
   postBooks,
   putBookByISBN,
 } from '@bookservice/constrollers/bookController'
@@ -16,6 +17,7 @@ const bookRouter = () => {
   router.get('/books/isbn/:ISBN', asyncWrapper(getBookByISBN))
   router.get('/books/:ISBN', asyncWrapper(getBookByISBN))
   router.put('/books/:ISBN', asyncWrapper(putBookByISBN))
+  router.get('/books/:ISBN/related-books', asyncWrapper(getBookByISBNRelatedBooks))
 
   return router
 }
