# api/src/api.yaml
@@ -121,6 +121,36 @@ paths:
         "404":
           description: ISBN not found
 
+  /books/{ISBN}/related-books:
+    get:
+      tags:
+        - books
+      summary: Get related books by ISBN
+      description: Get related books by ISBN
+      parameters:
+        - name: ISBN
+          in: path
+          required: true
+          description: ISBN of the book to get related books
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RelatedBookDto"
+        "204":
+          description: No related books found
+        "503":
+          description: Service unavailable
+        "504":
+          description: Gateway timeout
+        
+
   /customers:
     post:
       tags:
@@ -334,6 +364,18 @@ components:
         - genre
         - price
         - quantity
+    RelatedBookDto:
+      type: object
+      properties:
+        ISBN:
+          type: string
+          example: "978-3-16-148410-0"
+        title:
+          type: string
+          example: "The Hobbit"
+        Author:
+          type: string
+          example: "J.R.R. Tolkien"
   securitySchemes:
     bearerAuth:
       type: http
